--- a/LANDING/style.css
+++ b/LANDING/style.css
@@ -8,7 +8,10 @@ body {
     color: #ffffff;
 }
 
-.navbar {
+.container1{
+    background-color: #0c0774;
+}
+.navbar1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,22 +23,22 @@ body {
 }
 
 
-.navbar ul {
+.navbar1 ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.navbar li {
+.navbar1 li {
     margin-right: 20px;
 }
 
-.navbar img {
+.navbar1 img {
     height: 50px;
 }
 
-.navbar li a{
+.navbar1 li a{
     color: #1b12c4;
     text-decoration: none;
     font-weight: bold;
@@ -43,7 +46,7 @@ body {
     font-weight: 400;
 }
 
-.navbar li a:hover {
+.navbar1 li a:hover {
     text-decoration: underline;
 }
 
@@ -107,3 +110,72 @@ body {
     height: 300px;
 }
 
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    color: #000000;
+    height: 300px;
+    width: 300px;
+}
+.productsection{
+    display: flex;
+    justify-content: space-between;
+    align-items: space-between;
+    color: #ffffff;
+    padding: 10px;
+    margin: 20px;
+    box-shadow: 20px 0 20px rgba(255, 255, 255, 0.1);
+}
+
+button{
+    background-color: #3e13fd;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.card img{
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+}
+
+.oferta{
+    text-decoration: line-through;
+    color: red;
+    margin-right: 10px;
+}
+
+.contactsection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    color: #180775;
+    padding: 10px;
+    margin: 20px;
+    box-shadow: 20px 0 20px rgba(255, 255, 255, 0.1);
+}
+
+.contactdiv{
+    margin: 20px;
+}
+
+
+.videosection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #2d2d2d;
+    color: #ffffff;
+    padding: 10px;
+    box-shadow: 20px 0 20px rgba(255, 255, 255, 0.1);
+}
